# study

./: .gitignore  README.md
C++/DirichletTaskSolver/: CMakeLists.txt  common.h  gradient_descent.cc  gradient_descent.h  grid.cc  grid.h  matrix.h  srcmain.cc
C++/DirichletTaskSolver_MPI_CUDA/: common.cu  common.h  cuda_operations.cu  cuda_operations.h  gradient_descent.cu  gradient_descent.h  mpi_helpers.cpp  mpi_helpers.h  srcmain.cpp
C++/DirichletTaskSolver_MPI_OpenMP/: CMakeLists.txt  assembler.py  gradient_descent.cc  gradient_descent.h  grid.h  matrix.h  mpi_helpers.h  srcmain.cc
C++/DirichletTaskSolver_Parallel/: CMakeLists.txt  common.h  gradient_descent.cc  gradient_descent.h  grid.cc  grid.h  matrix.h  matrix_operations.cc  matrix_operations.h  mpi_helpers.cc  mpi_helpers.h  srcmain.cc
C++/Interpolation/src/: lagrange.cc  lagrange.h  srcmain.cc
C++/MPI/: makefile
C++/MPI/src/: common.hpp  mpi_stl_interface.hpp
C++/MPI_word_counter/src/: file_processor.cpp  file_processor.hpp  filename_reader.cpp  filename_reader.hpp  mpi_stl_interface.cpp  srcmain.cpp
C++/Min_points_pair_dist/: CMakeLists.txt  helper.cc  helper.h  srcmain.cc
C++/Parallel-EM/: common.h  matrix.cc  matrix.h  processor.cc  processor.h  srcmain.cc
C++/Simple_matrix_template/: matrix.h  raw.h  srcmain.cc
C++/Simple_multithread_app/: common.h  srcmain.cpp  thread_safe_holder.h  word_counter.cpp  word_counter.h
Matlab/Compositions/src/: bagging_experiment.m  gradient_boosting_experiment.m
Matlab/EM/src/: EM.m  data_gen.m  log_likelihood.m
R/Task_1/: report.Rmd  report.html
R/Task_2/: report.Rmd  report.html
R/Task_3/: report.Rmd  report.html
R/Task_4/: report.Rmd  report.html
(+3 files in other folders)
